--- a/css/aDashboard.css
+++ b/css/aDashboard.css
@@ -120,6 +120,16 @@ h2 {
     margin-left: 92px;
     margin-top: 20px;
 }
-
-
+.flex-container {
+    display: flex;
+    margin: 50px;
+    
+}
+.flex-container > div {
+    background-color: #f1f1f1;
+    justify-content: center;
+    margin: 180px;
+    padding: 10px;
+    font-size: 20px;
+  }
 
