--- a/css/aDashboard.css
+++ b/css/aDashboard.css
@@ -15,6 +15,7 @@ header {
     width: 100%;
     background-color: rgba(19, 52, 76, 1);
     height: 55px;
+    
 }
 
 
@@ -27,17 +28,51 @@ h3 {
     padding-left: 40px;
 }
 
+/* header na button */
+header a {
+    background-color: gray;
+    border-radius: 50%;
+    overflow: hidden; 
+    width: 30px; 
+    height: 20px; 
+    margin-right: 2%;
+    margin-top: 3px;
+    margin-bottom: 5px;
+    
+}
+header :hover{
+    opacity: 1.0;
+}
+header img{
+    overflow: hidden; 
+    position: center;
+    width: 30px;
+    height: 25px;
+    padding-right: 10%;
+    padding-left: 3%;
+    margin-top: 2%;
+}
+
+
+.body {
+    position: relative;
+    display: grid;
+    grid-template-columns: 4% auto;
+    width: 100%;
+}
+
 nav {
-    position: absolute;
-    top: 55px;
+    position: sticky;
+    height: 100vh;
+    top: 0;
     bottom: 0;
-    height: 100%;
     left: 0;
     background: rgba(54, 122, 145, 1);
     width: 60px;
     overflow: hidden;
     transition: width 0.2s linear;
     box-shadow: 0 20px 35px pink;
+    z-index: 1;
 }
 
 
@@ -98,7 +133,6 @@ a {
 
 .nav-item {
     position: relative;
-    top: 7px;
     margin-left: 0px;
 }
 
@@ -109,45 +143,82 @@ a:hover {
 nav:hover{
     width: 200px;
     transition: all 0.5s ease;
-}
-
-.logout {
-    position: relative;
-    margin-top: 30%;
-}
-
-h2 {
-    margin-left: 92px;
-    margin-top: 20px;
-    margin-bottom: 0px;
-}
-.flex-container {
-    display: flex;
-    margin: 50px;
     
 }
-.flex-container > div {
-    background-color: #f1f1f1;
-    justify-content: center;
-    margin: 20px;
-    margin-left: 45px;
-    margin-top: 0px;
-    padding: 10px;
-    font-size: 20px;
-  }
 
-.tenant {
-    width: 15%;
-    padding-top: 60px;
-    margin-top: 0px;
+/* .logout {
+    position: relative;
+    margin-top: 30%;
+} */
+
+/* WORD NA DASHBOARD*/
+h2 {
+    margin: 10px 20px;
+    color: rgba(19, 52, 76, 1);
+    font-size: 1cm;
+    padding-left:5px ;
 }
-.roomNo{
-    width: 15%;
-    padding-top: 60px;
-    margin-top: 0px;   
+/* design sa 3 notification buttons basta ana */
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+    margin: 60px 10px;
+    padding-left:19px ;
+    padding-right: 100px;
 }
-.bed{
-    width: 15%;
-    padding-top: 60px;
-    margin-top: 0px;   
+
+.flex-container > div {
+    background-color: #ffffff;
+    font-weight: bold;
+    border: black;
+    color: rgba(19, 52, 76, 1);
+    border-style: solid;
+    justify-content: center;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    width: 330px;
+   
 }
+.card img{
+    height: 130px;
+    width: 120px; 
+    padding: 20px;
+    border: black;
+    border-style: inset;
+}
+
+.card p{
+    margin-left: 20px;
+    position: center;
+    
+}
+
+
+/* TUNG MGA WORDS SA BOX */
+
+.text {
+    text-align: center;
+    padding: 10px;
+    flex: auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
+.value{
+    font-size: 50px;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
