--- a/css/aDashboard.css
+++ b/css/aDashboard.css
@@ -165,6 +165,7 @@ h2 {
     margin: 60px 10px;
     padding-left:19px ;
     padding-right: 100px;
+  
 }
 
 .flex-container > div {
@@ -184,8 +185,7 @@ h2 {
     height: 130px;
     width: 120px; 
     padding: 20px;
-    border: black;
-    border-style: inset;
+    border-right: 3px solid black;
 }
 
 .card p{
@@ -199,7 +199,8 @@ h2 {
 
 .text {
     text-align: center;
-    padding: 10px;
+    padding: 5px;
+    padding-right: 5%;
     flex: auto;
     flex-direction: column;
     align-items: center;
@@ -207,7 +208,7 @@ h2 {
     font-size: 20px;
 }
 .value{
-    font-size: 50px;
+    font-size: 55px;
     
 }
 
