--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,11 @@ button:hover {
     color: black;
 
 }
+
+.error {
+    background:rgb(245, 115, 121);
+    color: white;
+    padding: 10px;
+    width: 95%;
+    border-radius: 5px;
+}
