--- a/css/tenantProfile.css
+++ b/css/tenantProfile.css
@@ -38,6 +38,7 @@ nav {
     overflow: hidden;
     transition: width 0.2s linear;
     box-shadow: 0 20px 35px pink;
+    z-index: 1;
 }
 
 
@@ -98,7 +99,6 @@ a {
 
 .nav-item {
     position: relative;
-    top: 7px;
     margin-left: 0px;
 }
 
@@ -108,7 +108,7 @@ a:hover {
 
 nav:hover{
     width: 200px;
-    transition: all 0.5s ease;
+    display: block;
 }
 
 .logout {
@@ -119,7 +119,126 @@ nav:hover{
 h2 {
     margin-left: 92px;
     margin-top: 20px;
+    color: rgba(19, 52, 76, 1);
+    font-size: 1cm;
+    padding-left:5px ;
 }
 
+.container .input{
+    padding: 2px;
+	border: solid black;
+	
+	color: #8b7d77;
+}
+
+.search_wrap{
+	width: 500px;
+	margin: 38px auto;
+    margin-right: 50px;
+    float: right;
+}
+
+.search_wrap .search_box{
+	position: relative;
+	width: 500px;
+	height: 50px;
+}
+
+.search_wrap .search_box .input{
+
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding-left: 10px ;
+    padding-right: 50px;
+	font-size: 18px;
+}
+
+.search_wrap .search_box .btn{
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 60px;
+	height: 100%;
+    border: solid black;
+    border-left: none;
+	background: #82858b;
+	z-index: 1;
+	cursor: pointer;
+}
+
+.search_wrap .search_box .btn:hover{
+	background:rgb(3, 44, 82);	
+}
+
+.search_wrap .search_box .btn.btn_common .fas{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	color: rgb(0, 0, 0);
+	font-size: 30px;
+}
+
+.search_wrap.search_wrap_1 .search_box .btn{
+	right: 0;
+	border-top-right-radius: 3px;
+	border-bottom-right-radius: 3px;
+}
+.button {
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align:center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 17px;
+    font-style: unset;
+    font-weight: bold;
+    margin-left: 92px;
+    margin-top: 40px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  
+  .button1 {
+    padding: 1%;
+    text-align: center;
+    background-color:green; 
+    color: black; 
+    border: 2px solid #4CAF50;
+  }
+  .button1:hover {
+    background-color: #4CAF50;
+    color: white;
+  }
+#customers {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 70%;
+    margin:auto;
+  }
+  
+  #customers td, #customers th {
+    border: 1px solid rgb(0, 0, 0);
+    padding: 24px;
+    font-size: 15px;
+  }
+  
+  #customers tr:nth-child(even){
+    background-color: #f2f2f2;}
+  
+  #customers tr:hover {
+    background-color:rgba(54, 122, 145, 1);
+}
+  
+  #customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: rgb(3, 44, 82);
+    color: white;
+}
 
 
