--- a/css/tenantProfile.css
+++ b/css/tenantProfile.css
@@ -125,13 +125,14 @@ h2 {
 }
 
 .container .input{
-    padding: 2px;
-	border: solid black;
-	
+
+	border:none;
+	display: inline-block;
 	color: #8b7d77;
 }
 
 .search_wrap{
+    border: solid;
 	width: 500px;
 	margin: 38px auto;
     margin-right: 50px;
@@ -151,20 +152,19 @@ h2 {
 	width: 100%;
 	height: 100%;
 	padding-left: 10px ;
-    padding-right: 50px;
+    padding-right: 80px;
 	font-size: 18px;
 }
 
 .search_wrap .search_box .btn{
 	position: absolute;
 	top: 0;
-	right: 0;
+	right: 2px;
 	width: 60px;
 	height: 100%;
-    border: solid black;
-    border-left: none;
+    border-right: solid;
+    border-left: solid;
 	background: #82858b;
-	z-index: 1;
 	cursor: pointer;
 }
 
@@ -173,7 +173,7 @@ h2 {
 }
 
 .search_wrap .search_box .btn.btn_common .fas{
-	position: absolute;
+	position: relative;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
@@ -181,11 +181,7 @@ h2 {
 	font-size: 30px;
 }
 
-.search_wrap.search_wrap_1 .search_box .btn{
-	right: 0;
-	border-top-right-radius: 3px;
-	border-bottom-right-radius: 3px;
-}
+
 .button {
     border: none;
     color: white;
