--- a/css/tenantProfile.css
+++ b/css/tenantProfile.css
@@ -26,6 +26,30 @@ h3 {
     padding-top: 15px;
     padding-left: 40px;
 }
+header a {
+    background-color: gray;
+    border-radius: 50%;
+    overflow: hidden; 
+    width: 30px; 
+    height: 20px; 
+    margin-right: 2%;
+    margin-top: 3px;
+    margin-bottom: 5px;
+    
+}
+header :hover{
+    opacity: 1.0;
+}
+header img{
+    overflow: hidden; 
+    position: center;
+    width: 30px;
+    height: 25px;
+    padding-right: 10%;
+    padding-left: 3%;
+    margin-top: 2%;
+}
+
 
 nav {
     position: absolute;
@@ -123,7 +147,7 @@ h2 {
     font-size: 1cm;
     padding-left:5px ;
 }
-
+/*search bar*/
 .container .input{
 
 	border:none;
@@ -197,7 +221,7 @@ h2 {
     transition-duration: 0.4s;
     cursor: pointer;
   }
-  
+ /*add new button*/ 
   .button1 {
     padding: 1%;
     text-align: center;
@@ -209,6 +233,7 @@ h2 {
     background-color: #4CAF50;
     color: white;
   }
+/*table*/
 #customers {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
