--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    background: url('bg1.png');
+    background: url('photos/background.png');
     background-size: cover;
     
 }
@@ -27,7 +27,108 @@ h3 {
     padding-top: 15px;
     padding-left: 40px;
 }
+/*PICTURE NGA MUDAGAN*/
+.mySlides {
+    display: none
+}
+img {
+	margin-top: -30px;
+    vertical-align: middle;
+}
 
+.slideshow-container {
+    max-width: 500px;
+    position: relative;
+    margin-top:80px;
+    margin-left: 33%;
+}
+
+.prev {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-left: -50px;
+    margin-top: -22px;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 5px;
+    user-select: none;
+}
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-right: -50px;
+    margin-top: -22px;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 5px;
+    user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 5px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(255, 255, 255,0.8);
+    color: black
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 30px;
+    margin: 0 2px;
+    background-color: #bbb;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    } 
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    } 
+    to {
+        opacity: 1
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    .prev, .next,.text {
+        font-size: 11px
+    }
+}
+/*LOGIN BUTTON */
 .btnLogin {
 	background-color: rgba(136, 191, 203, 1);
     color: black;
