--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ h3 {
 	padding-right: 25px;
 	font-size: 15px;
 	cursor: pointer;
+    width: 100px;
 }
 
 .btnLogin:hover {
@@ -63,6 +64,10 @@ input[type="checkbox"] {
     padding: 20px;
     border-radius: 4px;
     border: 1px solid rgba(19, 52, 76, 1);
+}
+
+.form.active {
+    display: block;
 }
 
 .form .close {
@@ -109,7 +114,7 @@ input {
     font-size: 16px;
 }
 
-button {
+.login-submit {
     display: block;
     width: 93%;
     padding: 8px;
@@ -141,9 +146,27 @@ button:hover {
 }
 
 .error {
-    background:rgb(245, 115, 121);
-    color: white;
+    color: #C62828;
+    background: rgba(255,0,0,0.1);
     padding: 10px;
     width: 95%;
     border-radius: 5px;
+    margin: 20px auto;
+} 
+
+#uname-error, #pass-error {
+    margin-top: 5px;
+    margin-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 288px;
+    font-size: 16px;
+    color: #C62828;
+    background: rgba(255,0,0,0.1);
+    text-align: center;
+    border-radius: 3px;
+    border: 1px solid #EF9A9A;
+    display: none;
 }
