--- a/css/tenantProfile.css
+++ b/css/tenantProfile.css
@@ -149,7 +149,7 @@ h2 {
 }
 /*search bar*/
 .container .input{
-
+    position: relative;
 	border:none;
 	display: inline-block;
 	color: #8b7d77;
@@ -205,23 +205,24 @@ h2 {
 	font-size: 30px;
 }
 
-
+ /*add new button*/ 
 .button {
+    padding-inline: auto;
     border: none;
     color: white;
-    padding: 16px 32px;
+   
     text-align:center;
     text-decoration: none;
     display: inline-block;
     font-size: 17px;
     font-style: unset;
     font-weight: bold;
-    margin-left: 92px;
+    margin-left: 201px;
     margin-top: 40px;
     transition-duration: 0.4s;
     cursor: pointer;
   }
- /*add new button*/ 
+
   .button1 {
     padding: 1%;
     text-align: center;
@@ -236,10 +237,10 @@ h2 {
 /*table*/
 #customers {
     font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 70%;
-    margin:auto;
-  }
+    border-collapse:collapse;
+    width: 83%;
+    margin-left: 201px;
+}
   
   #customers td, #customers th {
     border: 1px solid rgb(0, 0, 0);
