--- a/css/room.css
+++ b/css/room.css
@@ -117,9 +117,154 @@ nav:hover{
 }
 
 h2 {
-    margin-left: 92px;
+    margin-left: 201px;
     margin-top: 20px;
+    color: rgba(19, 52, 76, 1);
+    font-size: 1cm;
+    padding-left:5px ;
 }
+header a {
+    background-color: gray;
+    border-radius: 50%;
+    overflow: hidden; 
+    width: 30px; 
+    height: 20px; 
+    margin-right: 2%;
+    margin-top: 3px;
+    margin-bottom: 5px;
+    
+}
+header :hover{
+    opacity: 1.0;
+}
+header img{
+    overflow: hidden; 
+    position: center;
+    width: 30px;
+    height: 25px;
+    padding-right: 10%;
+    padding-left: 3%;
+    margin-top: 2%;
+}
+.container .input{
+    position: relative;
+	border:none;
+	display: inline-block;
+	color: #8b7d77;
+}
+
+.search_wrap{
+    border: solid;
+	width: 500px;
+	margin: 38px auto;
+    margin-right: 50px;
+    float: right;
+}
+
+.search_wrap .search_box{
+	position: relative;
+	width: 500px;
+	height: 50px;
+}
+
+.search_wrap .search_box .input{
+
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding-left: 10px ;
+    padding-right: 80px;
+	font-size: 18px;
+}
+
+.search_wrap .search_box .btn{
+	position: absolute;
+	top: 0;
+	right: 2px;
+	width: 60px;
+	height: 100%;
+    border-right: solid;
+    border-left: solid;
+	background: #82858b;
+	cursor: pointer;
+}
+
+.search_wrap .search_box .btn:hover{
+	background:rgba(54, 122, 145, 1);	
+}
+
+.search_wrap .search_box .btn.btn_common .fas{
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	color: rgb(0, 0, 0);
+	font-size: 30px;
+}
+
+ /*add new button*/ 
+.button {
+    padding-inline: auto;
+    border: none;
+    color: white;
+   
+    text-align:center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 17px;
+    font-style: unset;
+    font-weight: bold;
+    margin-left: 201px;
+    margin-top: 40px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+
+  .button1 {
+    padding: 1%;
+    text-align: center;
+    background-color:green; 
+    color: black; 
+    border: 2px solid #4CAF50;
+  }
+  .button1:hover {
+    background-color: #4CAF50;
+    color: white;
+  }
+/*table*/
+#customers {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse:collapse;
+    width: 83%;
+    margin-left: 201px;
+}
+  
+  #customers td, #customers th {
+    border: 1px solid rgb(0, 0, 0);
+    padding: 24px;
+    font-size: 15px;
+    
+  }
+  
+  #customers tr:nth-child(even){
+    background-color: #f2f2f2;}
+  
+  #customers tr:hover {
+    background-color:rgba(54, 122, 145, 1);
+}
+  
+  #customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: rgb(3, 44, 82);
+    color: white;
+    text-align: center;
+}
+
+
+
 
 
 
