--- a/css/aDashboard.css
+++ b/css/aDashboard.css
@@ -1,225 +1,99 @@
-* {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    outline: none;
-    margin: 0;
-    padding: 0;
-    border: none;
-    text-decoration: none;
-    box-sizing: border-box;
+:root {
+    --main-bg-color: #009d63;
+    --main-text-color: #009d63;
+    --second-text-color: #bbbec5;
+    --second-bg-color: #c1efde;
 }
 
-
-header {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    background-color: rgba(19, 52, 76, 1);
-    height: 55px;
-    
+.primary-text {
+    color: #2f3031;
 }
 
-
-h3 {
-    color: white;
-    font-weight: normal;
-    font-size: 20px;
-    margin: 0;
-    padding-top: 15px;
-    padding-left: 40px;
+.second-text {
+    color: var(--second-text-color);
 }
 
-/* header na button */
-header a {
-    background-color: gray;
-    border-radius: 50%;
-    overflow: hidden; 
-    width: 30px; 
-    height: 20px; 
-    margin-right: 2%;
-    margin-top: 3px;
-    margin-bottom: 5px;
-    
-}
-header :hover{
-    opacity: 1.0;
-}
-header img{
-    overflow: hidden; 
-    position: center;
-    width: 30px;
-    height: 25px;
-    padding-right: 10%;
-    padding-left: 3%;
-    margin-top: 2%;
+.primary-bg {
+    background-color: var(--main-bg-color);
 }
 
-
-.body {
-    position: relative;
-    display: grid;
-    grid-template-columns: 4% auto;
-    width: 100%;
+.secondary-bg {
+    background-color: var(--second-bg-color);
 }
 
-nav {
-    position: sticky;
-    height: 100vh;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    background: rgba(54, 122, 145, 1);
-    width: 60px;
-    overflow: hidden;
-    transition: width 0.2s linear;
-    box-shadow: 0 20px 35px pink;
-    z-index: 1;
+.rounded-full {
+    border-radius: 100%;
 }
 
-
-.logo {
-    text-align: center;
-    display: flex;
-    transition: all 0.5s ease;
-    margin: 10px 0 0 3px;
-} 
-
-.logo img {
-    width: 35px;
-    height: 35px;
-    
+#wrapper {
+    overflow-x: hiddden;
+    background-image: linear-gradient(to right, #baf3d7, #c2f5de, #cbf7e4, #d4f8ea, #ddfaef);
 }
 
-.logo span {
-    font-weight: bold;
-    padding-left: 15px;
-    font-size: 18px;
-}
-
-.menu {
-    text-align: center;
-    display: flex;
-    transition: all 0.5s ease;
-    margin: 0px 0 0 3px;
-} 
-
-.menu img {
-    width: 30px;
-    height: 30px;
-}
-
-.menu span {
-    font-weight: normal;
-    font-size: 13.5px;
+#sidebar-wrapper {
+    min-height: 100vh;
+    width: 188px;
     margin-left: 0;
 }
 
-a {
-    position: relative;
-    color: white;
-    font-size: 14px;
-    display: table;
-    width: 300px;
-    padding: 10px;
+
+
+#sidebar-wrapper .sidebar-heading {
+    padding: 0.875rem 1.25rem;
+    font-size: 1.2rem;
 }
 
-.ams {
-    position: relative;
-    width: 17px;
-    height: 40px;
-    top: 14px;
-    font-size: 20px;
-    text-align: center;
+#sidebar-wrapper .list-group {
+    width: 15rem;
 }
 
-.nav-item {
-    position: relative;
-    margin-left: 0px;
+#page-content-wrapper {
+    min-width: 100vw;
+    color: #009d63;
+    background-color: white;
 }
 
-a:hover {
-    background: rgb(3, 44, 82);
+#wrapper.toggled #sidebar-wrapper {
+    margin-left: 0;
 }
 
-nav:hover{
-    width: 200px;
-    transition: all 0.5s ease;
-    
+#menu-toggle {
+    cursor: pointer;
 }
 
-/* .logout {
-    position: relative;
-    margin-top: 30%;
-} */
-
-/* WORD NA DASHBOARD*/
-h2 {
-    margin: 10px 20px;
-    color: rgba(19, 52, 76, 1);
-    font-size: 1cm;
-    padding-left:5px ;
-}
-/* design sa 3 notification buttons basta ana */
-.flex-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 60px 10px;
-    padding-left:19px ;
-    padding-right: 100px;
-  
+.list-group-item {
+    border: none;
+    padding: 20px 30px;
 }
 
-.flex-container > div {
-    background-color: #ffffff;
+.list-group-item.active {
+    background-color: transparent;
+    color: #2f3031;
     font-weight: bold;
-    border: black;
-    color: rgba(19, 52, 76, 1);
-    border-style: solid;
-    justify-content: center;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    width: 330px;
-   
-}
-.card img{
-    height: 130px;
-    width: 120px; 
-    padding: 20px;
-    border-right: 3px solid black;
+    border: none;
+    width: 188px;
 }
 
-.card p{
-    margin-left: 20px;
-    position: center;
-    
+.list-group-item.active:hover {
+    background-color: white;
 }
 
 
-/* TUNG MGA WORDS SA BOX */
-
-.text {
-    text-align: center;
-    padding: 5px;
-    padding-right: 5%;
-    flex: auto;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-}
-.value{
-    font-size: 55px;
-    
+#page-content-wrapper {
+    min-width: 0;
+    width: 100%;    
 }
 
 
+.dropdown-menu {
+    margin-left: 1000px;
+    background-image: linear-gradient(to right, #baf3d7, #c2f5de, #cbf7e4, #d4f8ea, #ddfaef);
+}
 
+.dropdown-item:hover {
+    background-color: white;
+}
 
-
-
-
-
-
-
-
-
+.box {
+    color:#2f3031;
+}
