--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,7 @@ img {
     padding: 20px;
     border-radius: 4px;
     border: 1px solid rgba(19, 52, 76, 1);
+    background-color: white;
 }
 
 
