--- a/css/style.css
+++ b/css/style.css
@@ -1,132 +1,197 @@
-
-
-* {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-}
-
-html, body {
+*{
+    pad: 0;
     margin: 0;
-    padding: 0;
-    background-image: linear-gradient(to right, #baf3d7, #c2f5de, #cbf7e4, #d4f8ea, #ddfaef);
-    background-size: cover;
-    
+    box-sizing: border-box;
 }
-header {
+body{
+    font-family: 'Poppins', sans-serif;
+}
+.wave{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	height: 100%;
+	z-index: -1;
+}
+.container{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap :7rem;
+    padding: 0 2rem;
+}
+.img{
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+.img img{
+    width: 500px;
+}
+.login-container{
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    background-color: white;
-    height: 55px;
-}
-
-
-h3 {
-    color: black;
-    font-weight: normal;
-    font-size: 20px;
-    margin: 0;
-    padding-top: 15px;
-    padding-left: 40px;
-}
-
-.form {
-    display: block;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 350px;
-    padding: 20px;
-    border-radius: 4px;
-    border: 1px solid  #a1f8a4;
-    background-color: white;
-}
-
-h4 {
+    align-items: center;
     text-align: center;
-    color: rgba(19, 52, 76, 1);
+}
+form{
+    width: 360px;
+}
+.avatar{
+    width: 100px;
+}
+form h2{
+    font-size: 2.9rem;
     text-transform: uppercase;
-    padding-left: 10px;
+    margin: 15px 0;
+    color: #333;
+}
+.input-div{
+    position: relative;
+    display: grid;
+    grid-template-columns: 7% 93%;
+    margin: 25px 0;
+    padding: 5px 0;
+    border-bottom:2px solid #d9d9d9;
+}
+.input-div:after, .input-div:before{
+	content: '';
+	position: absolute;
+	bottom: -2px;
+	width: 0%;
+	height: 2px;
+	background-color: #38d39f;
+	transition: 3s;
+}
+.input-div:after{
+	right: 50%;
+}
+.input-div:before{
+	left: 50%;
+}
+.input-div.focus .i i{
+	color: #38d39f;
+}
+.input-div.focus div h5 {
+    top: -5px;
+	font-size: 15px;
+}
+.input-div.focus:after, .input-div.focus::before{
+	width: 50%;
+}
+.input-div.one{
+    margin-top: 0;
+}
+.input-div.two{
+    margin-bottom: 4px;
 }
 
-form {
-    margin: 20px;
+.i{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.i i{
+    color: #d9d9d9;
+    transition: .3s;
+}
+.input-div > div{
+    position: relative;
+	height: 45px;
 }
 
-label {
-    display: block;
-    color: black;
-    font-size: 18px;
-    margin-top: 10px;
-    padding-top: 20px;
-    padding-left: 10px;
+.input-div > div h5{
+	position: absolute;
+	left: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	color: #999;
+   /* display: none;*/
+	font-size: 18px;
+	transition: .3s;
 }
-
-input {
-    display: block;
-    width:86%;
-    background: transparent;
+.input{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     border: none;
     outline: none;
-    border-bottom: 1px solid black;
-    padding: 15px;
-    margin-left: 10px;
-    font-size: 16px;
+    background: none;
+    padding: 0.5rem 0.7rem;
+    font-size: 1.2rem;
+    font-family: 'Poppins', sans-serif;
+    color: #555;
+}
+a{
+	display: block;
+	text-align: right;
+	text-decoration: none;
+	color: #999;
+	font-size: 0.9rem;
+	transition: .3s;
 }
 
-.loginbtn {
-    display: block;
-    width: 93%;
-    padding: 8px;
-    border: none;
-    outline: none;
-    background: #a1f8a4;
-    color: black;
-    font-size: 18px;
+a:hover{
+	color: #38d39f;
+}
+.btn{
+	display: block;
+	width: 100%;
+	height: 50px;
+	border-radius: 25px;
+    margin: 1rem 0;
+    font-size: 1.2rem;
+	outline: none;
+	border: none;
+	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
     cursor: pointer;
-    margin-top: 20px;
-    margin-left: 9px;
+	color: #fff;
+	font-family: 'Poppins', sans-serif;
+    background-size: 200%;
+	text-transform: uppercase;
+	transition: .5s;
+}
+.btn:hover{
+	background-position: right;
 }
 
-a {
-    text-decoration: none;
-    color: black;
-    margin-left: 10px;
-    text-align: right;
+@media screen and (max-width: 1050px){
+	.container{
+		grid-gap: 5rem;
+	}
 }
 
-a:hover {
-    text-decoration: underline;
+@media screen and (max-width: 1000px){
+	form{
+		width: 290px;
+	}
+
+	.login-content h2{
+        font-size: 2.4rem;
+        margin: 8px 0;
+	}
+
+	.img img{
+		width: 400px;
+	}
 }
 
-.loginbtn:hover {
-    background-color:  #b2f7b4;
-    color: black;
-}
+@media screen and (max-width: 900px){
+	.container{
+		grid-template-columns: 1fr;
+	}
 
-.error {
-    color: #C62828;
-    background: rgba(255,0,0,0.1);
-    padding: 10px;
-    width: 95%;
-    border-radius: 5px;
-    margin: 20px auto;
-} 
+	.img{
+		display: none;
+	}
 
-#uname-error, #pass-error {
-    margin-top: 5px;
-    margin-left: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 288px;
-    font-size: 16px;
-    color: #C62828;
-    background: rgba(255,0,0,0.1);
-    text-align: center;
-    border-radius: 3px;
-    border: 1px solid #EF9A9A;
-    display: none;
+	.wave{
+		display: none;
+	}
+
+	.login-content{
+		justify-content: center;
+	}
 }
