--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    background: url('photos/background.png');
+    background-image: linear-gradient(to right, #baf3d7, #c2f5de, #cbf7e4, #d4f8ea, #ddfaef);
     background-size: cover;
     
 }
@@ -16,42 +16,18 @@ header {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    background-color: rgba(19, 52, 76, 1);
+    background-color: white;
     height: 55px;
 }
 
 
 h3 {
-    color: white;
+    color: black;
     font-weight: normal;
     font-size: 20px;
     margin: 0;
     padding-top: 15px;
     padding-left: 40px;
-}
-
-/*LOGIN BUTTON */
-.btnLogin {
-	background-color: rgba(136, 191, 203, 1);
-    color: black;
-	border-radius: 25px;
-	border-style: none;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-right: 30px;
-	padding-top: 8px;
-	padding-bottom: 11px;
-	padding-left: 25px;
-	padding-right: 25px;
-	font-size: 15px;
-    font-weight: medium;
-	cursor: pointer;
-    width: 100px;
-}
-
-.btnLogin:hover {
-    background-color: rgb(148, 216, 231);
-    color: black;
 }
 
 .form {
@@ -63,26 +39,9 @@ h3 {
     width: 350px;
     padding: 20px;
     border-radius: 4px;
-    border: 1px solid rgba(19, 52, 76, 1);
+    border: 1px solid  #a1f8a4;
     background-color: white;
 }
-
-
-.form.active {
-    display: none;
-}
-
-.form .close {
-    position:absolute;
-    right: 20px;
-    top: 0;
-    font-size: 25px;
-    cursor: pointer;
-}
-
-.close:hover {
-    color: red;
-} 
 
 h4 {
     text-align: center;
@@ -122,8 +81,8 @@ input {
     padding: 8px;
     border: none;
     outline: none;
-    background:rgba(19, 52, 76, 1);
-    color: white;
+    background: #a1f8a4;
+    color: black;
     font-size: 18px;
     cursor: pointer;
     margin-top: 20px;
@@ -142,8 +101,8 @@ a:hover {
 }
 
 .loginbtn:hover {
-    background-color: rgb(28, 78, 114);
-    color: white;
+    background-color:  #b2f7b4;
+    color: black;
 }
 
 .error {
