--- a/css/tenantProfile.css
+++ b/css/tenantProfile.css
@@ -84,6 +84,46 @@
     width: 100%;    
 }
 
+.search_wrap{
+	width: 400px;
+    margin-right: 1px;
+    float: right;
+    margin-top: 47px;
+}
+
+.search_wrap .search_box{
+	position: relative;
+	width: 300px;
+	height: 25px;
+}
+
+.search_wrap .search_box .input{
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding-left: 10px ;
+    padding-right: 80px;
+	font-size: 14px;
+}
+
+.search_wrap .search_box .btn{
+	position: absolute;
+	top: 0;
+	right: 1px;
+	width: 45px;
+	height: 98%;
+	background: #a1f8a4;
+	cursor: pointer;
+}
+
+.search_wrap .search_box .btn.btn_common .fas{
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	font-size: 30px;
+}
 
 .dropdown-menu {
     margin-left: 1000px;
@@ -94,121 +134,26 @@
     background-color: white;
 }
 
-/*search bar*/
-.container .input{
-    position: relative;
-	border:none;
-	display: inline-block;
-	color: #8b7d77;
-}
-
-.search_wrap{
-    border: solid;
-	width: 500px;
-	margin: 38px auto;
-    margin-right: 50px;
-    float: right;
-}
-
-.search_wrap .search_box{
-	position: relative;
-	width: 500px;
-	height: 50px;
-}
-
-.search_wrap .search_box .input{
-
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	padding-left: 10px ;
-    padding-right: 80px;
-	font-size: 18px;
-}
-
-.search_wrap .search_box .btn{
-	position: absolute;
-	top: 0;
-	right: 2px;
-	width: 60px;
-	height: 100%;
-    border-right: solid;
-    border-left: solid;
-	background: #82858b;
-	cursor: pointer;
-}
-
-.search_wrap .search_box .btn:hover{
-	background:rgba(54, 122, 145, 1);	
-}
-
-.search_wrap .search_box .btn.btn_common .fas{
-	position: relative;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	color: rgb(0, 0, 0);
-	font-size: 30px;
-}
-
- /*add new button*/ 
-.button {
-    padding-inline: auto;
-    border: none;
-    color: white;
-   
-    text-align:center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 17px;
-    font-style: unset;
+.btn-add {
+    background-color: #a1f8a4;
+    margin-left: 25px;
     font-weight: bold;
-    margin-left: 201px;
-    margin-top: 40px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-  }
-
-  .button1 {
-    padding: 1%;
-    text-align: center;
-    background-color:green; 
-    color: black; 
-    border: 2px solid #4CAF50;
-  }
-  .button1:hover {
-    background-color: #4CAF50;
-    color: white;
-  }
-/*table*/
-#customers {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse:collapse;
-    width: 83%;
-    margin-left: 201px;
-}
-  
-  #customers td, #customers th {
-    border: 1px solid rgb(0, 0, 0);
-    padding: 24px;
-    font-size: 15px;
-  }
-  
-  #customers tr:nth-child(even){
-    background-color: #f2f2f2;}
-  
-  #customers tr:hover {
-    background-color:rgba(54, 122, 145, 1);
-}
-  
-  #customers th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: rgb(3, 44, 82);
-    color: white;
-    text-align: center;
+    color: #2f3031;
 }
 
+.table-header {
+    background-color: #baf3d7;
+}
 
+.table {
+    margin-left: 25px;
+    width: 90%;
+}
+
+.data-row {
+    font-size: 14px;
+}
+
+.action-icon {
+    color: #0ba310;
+}
