--- a/css/invoice.css
+++ b/css/invoice.css
@@ -84,6 +84,46 @@
     width: 100%;    
 }
 
+.search_wrap{
+	width: 400px;
+    margin-right: 1px;
+    float: right;
+    margin-top: 47px;
+}
+
+.search_wrap .search_box{
+	position: relative;
+	width: 300px;
+	height: 25px;
+}
+
+.search_wrap .search_box .input{
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding-left: 10px ;
+    padding-right: 80px;
+	font-size: 14px;
+}
+
+.search_wrap .search_box .btn{
+	position: absolute;
+	top: 0;
+	right: 1px;
+	width: 45px;
+	height: 98%;
+	background: #a1f8a4;
+	cursor: pointer;
+}
+
+.search_wrap .search_box .btn.btn_common .fas{
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	font-size: 30px;
+}
 
 .dropdown-menu {
     margin-left: 1000px;
@@ -92,4 +132,28 @@
 
 .dropdown-item:hover {
     background-color: white;
+}
+
+.btn-add {
+    background-color: #a1f8a4;
+    margin-left: 25px;
+    font-weight: bold;
+    color: #2f3031;
+}
+
+.table-header {
+    background-color: #baf3d7;
+}
+
+.table {
+    margin-left: 25px;
+    width: 90%;
+}
+
+.data-row {
+    font-size: 14px;
+}
+
+.action-icon {
+    color: #0ba310;
 }
