--- a/css/style.css
+++ b/css/style.css
@@ -195,3 +195,12 @@ a:hover{
 		justify-content: center;
 	}
 }
+
+.error {
+	color: #C62828;
+	background: rgba(255, 0, 0, 0.1);
+	padding: 10px;
+	width: 95%;
+	border-radius: 5px;
+	margin: 20px auto;
+}
