--- a/css/noticeBoard.css
+++ b/css/noticeBoard.css
@@ -93,3 +93,49 @@
 .dropdown-item:hover {
     background-color: white;
 }
+
+
+/*Notice Board*/
+.myDiv {
+    width: 70%;
+    margin:auto;
+    margin-top: 60px;
+    margin-left: 200px;
+    margin-right:50px;
+    border: 1px outset rgb(5, 5, 5);
+    background-color: lightblue;    
+    text-align: center;
+    position: relative;
+    padding: 40px;
+}
+
+  input[type=text] {
+    width: 80%;
+    padding: 4px 10px;
+    margin: 8px 0;  
+  }
+  textarea {
+    width: 80%;
+    height: 50%;
+    padding: 20px 10px;
+    margin: 8px 0;
+    size: 100inch;
+    margin-left:1%;
+  }
+  .label {
+    display: flex;
+    align-items: center;
+    gap: 2em;
+    padding-left: 10%;
+    padding-left: 10%;
+    margin: 1%;
+    margin-right: 10%;
+
+  }
+   
+
+
+  input[type=submit]{
+    width: 10%;
+    margin-left: 61%;
+  }
