--- a/css/tenantProfileSettings.css
+++ b/css/tenantProfileSettings.css
@@ -1,12 +1,37 @@
-.body {
-    margin-bottom: #009d63;
-    text-emphasis-color: #009d63;
-    border-left-color: #bbbec5;
-    scrollbar-color: #c1efde;
+body {
+    background: #009d63;
 }
 
-.button{
-    background-color:#009d63;
-    margin: 10x;
-    padding: 5px;
+.form-control:focus {
+    box-shadow: #009d63;
+    border-color: #009d63;
+}
+
+.profile-button {
+    background: #009d63;
+    box-shadow: #009d63;
+    border: #009d63;
+}
+
+.profile-button:hover {
+    background: #009d63;
+}
+
+.profile-button:focus {
+    background: #009d63;
+    box-shadow: none
+}
+
+.profile-button:active {
+    background:#009d63;
+    box-shadow: none
+}
+
+.back:hover {
+    color: #009d63;
+    cursor: pointer
+}
+
+.labels {
+    font-size: 11px
 }
