--- a/css/forgotpassword.css
+++ b/css/forgotpassword.css
@@ -82,9 +82,6 @@ form h2{
 .input-div.one{
     margin-top: 0;
 }
-.input-div.two{
-    margin-bottom: 4px;
-}
 
 .i{
     display: flex;
@@ -194,4 +191,13 @@ a:hover{
 	.login-content{
 		justify-content: center;
 	}
+}
+
+.error {
+	color: #C62828;
+	background: rgba(255, 0, 0, 0.1);
+	padding: 10px;
+	width: 95%;
+	border-radius: 5px;
+	margin: 20px auto;
 }
