--- a/css/tenantNotice.css
+++ b/css/tenantNotice.css
@@ -32,7 +32,7 @@
 
 #sidebar-wrapper {
     min-height: 100vh;
-    width: 188px;
+    width: 183px;
     margin-left: 0;
 }
 
@@ -72,6 +72,10 @@
     font-weight: bold;
     border: none;
     width: 188px;
+    text-decoration: none;
+    padding-bottom: 13px;
+    padding-top: 13px;
+    font-size: 15px;
 }
 
 .list-group-item.active:hover {
