--- a/css/utility.css
+++ b/css/utility.css
@@ -32,7 +32,7 @@
 
 #sidebar-wrapper {
     min-height: 100vh;
-    width: 188px;
+    width: 183px;
     margin-left: 0;
 }
 
@@ -72,6 +72,10 @@
     font-weight: bold;
     border: none;
     width: 188px;
+    text-decoration: none;
+    padding-bottom: 13px;
+    padding-top: 13px;
+    font-size: 15px;
 }
 
 .list-group-item.active:hover {
@@ -239,11 +243,6 @@
 }
 
 /** table css **/
-body {
-    color: #566787;
-    background: #44d0f4;
-    font-family: 'Roboto', sans-serif;
-}
 
 .table-wrapper {
     min-width: 10%;
